assets/dev/scss/editor/_templates-modal.scss
/* ... */
.elementor-template-library-template-page,
.elementor-template-library-template-lp {

	@media (max-width: $library_screen_breakpoint) {
		width: calc(25% - #{$remote-templates-items-space});
	}

	@media (min-width: $library_screen_breakpoint + 1) {
		width: calc(20% - #{$remote-templates-items-space});
	}

	@media (max-width: $editor-screen-lg-min) {
		width: calc(33.333% - #{$remote-templates-items-space});
	}

	.elementor-template-library-template-body {
		height: 200px;
	}
}

#elementor-template-library-order-toolbar-local,
.elementor-template-library-template-local,
.elementor-template-library-template-cloud:not(.elementor-template-library-template-view-grid) {
	display: flex;
	align-items: center;
	padding: 0 25px;
	text-align: start;

	// fix it
	@media (max-width: $library_screen_breakpoint) {

		.elementor-template-library-local-column-1 {
			width: 33%;
		}

		.elementor-template-library-local-column-2 {
			width: 10%;
		}

		.elementor-template-library-local-column-3 {
			width: 15%;
		}

		.elementor-template-library-local-column-4 {
			width: 15%;
		}

		.elementor-template-library-local-column-5 {
			width: 27%;
		}
	}

	@media (min-width: $library_screen_breakpoint + 1) {

		.elementor-template-library-local-column-1 {
			width: 25%;
		}

		.elementor-template-library-local-column-2 {
			width: 17%;
		}

		.elementor-template-library-local-column-3 {
			width: 17%;
		}

		.elementor-template-library-local-column-4 {
			width: 17%;
		}

		.elementor-template-library-local-column-5 {
			width: 24%;
		}
	}

	@media (max-width: $editor-screen-md-max) {

		.elementor-template-library-local-column-3 {
			display: none;
		}

		.elementor-template-library-local-column-5 {
			width: 41%;
		}
	}
}

#elementor-template-library-order-toolbar-local {
	margin-block-start: 30px;

	.elementor-template-library-order-label {
		line-height: 1;
		font-size: 10px;
		font-weight: 500;
	}
}

.elementor-template-library-template-local,
.elementor-template-library-template-cloud {
	.elementor-template-library-template-more {
		display: none;
		position: absolute;
		background-color: var(--e-a-bg-default);
		border-radius:  var(--e-a-border-radius);
		box-shadow: 1px 3px 11px rgba(0,0,0,0.3);
		top: 100%;
		@include end(0);
		transform: translateX(getValueByDirection(65%, -65%)) translateY(-7px);
		z-index: 1;

		&:before {
			content: '';
			position: absolute;
			border: solid transparent;
			border-width: 8px 4px;
			border-block-end-color: var(--e-a-color-white);
			transform: translateY(-100%);
		}

		> div {
			padding: 10px 20px;
			font-size: 11px;
			cursor: pointer;
		}

		a {
			color: var(--e-a-color-txt);
		}

		.elementor-template-library-template-delete {

			&:hover {
				color: var(--e-a-color-danger);
			}
		}
	}

	.elementor-template-library-template-more-toggle {
		margin-inline-start: auto;
		cursor: pointer;

		i {
			font-size: 16px;
		}
	}
}

.elementor-template-library-template-local,
.elementor-template-library-template-cloud:not(.elementor-template-library-template-view-grid) {
	height: 50px;
	width: 100%;
	margin-block-start: 1px;
	transition: background-color .3s linear;

	&:hover {
		background-color: var(--e-a-bg-hover);
	}

	&:first-child {
		border-start-start-radius: 3px;
		border-start-end-radius: 3px;
		border-end-start-radius: 0;
		border-end-end-radius: 0;
	}

	&:last-child {
		border-start-start-radius: 0;
		border-start-end-radius: 0;
		border-end-start-radius: 3px;
		border-end-end-radius: 3px;
	}

	.elementor-template-library-template-name {
		font-weight: 500;
	}

	.elementor-template-library-template-name,
	.elementor-template-library-template-meta {
		padding-inline-end: 20px;
	}

	.elementor-template-library-local-column-1 i {
		padding-inline-end: 10px;
	}

	.elementor-template-library-template-name,
	.elementor-template-library-template-meta,
	.elementor-template-library-template-preview,
	.elementor-template-library-template-action {
		@include ellipsis;
	}

	.elementor-template-library-template-controls {
		position: relative;
		display: flex;
		align-items: center;

		> div {
			cursor: pointer;
			transition: color .5s;
		}
	}

	.elementor-template-library-template-insert {

		i {
			margin-inline-end: 3px;
		}
	}

	.elementor-template-library-template-control-title {
		margin-inline-start: 6px;
	}
}

#elementor-template-library-preview {
	height: 100%;
	overflow: hidden;

	iframe {
		height: 150%;
		transform: scale(0.666) translateX(getValueByDirection(-25%, 25%)) translateY(-25%);

		@media (max-width: $library_screen_breakpoint) {
			width: 1440px;
		}

		@media (min-width: $library_screen_breakpoint + 1) {
			width: 1730px;
		}
	}
}

.elementor-template-library-blank-icon {
	font-size: 64px;
	margin-block-start: 45px;
	line-height: 1;

	img {
		width: 70px;
	}

	.elementor-template-library-no-results {
		width: 200px;
	}
}

.elementor-template-library-blank-title {
	font-size: 30px;
	margin-block-start: 20px;

	@media (max-width: $editor-screen-lg-max) {
		font-size: 25px;
	}
}

.elementor-template-library-blank-message {
	font-size: 18px;
	margin-block-start: 15px;
	font-weight: 300;

	@media (max-width: $editor-screen-lg-max) {
		font-size: 16px;
		margin-block-start: 10px;
	}
}
/* ... */

